5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1649_2443.log
== TEST (2019-04-16 13:07:23) 
-- CODE:
from math import*

raio= float(input("Didite o valor do raio :"))
h= float(input("digite o valor da altura :"))
n=int(input("1/2:"))

if(n==1):
	v=(4 * pi)*(raio ** 3)/ 3
	print(v)
	
else:
	v2= pi * h  ** 2 * ( 3 * raio - h)/ 3 
	print(v2)

-- OUTPUT:
179.5943800302165
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:08:37) 
-- CODE:
from math import*

raio= float(input("Didite o valor do raio :"))
h= float(input("digite o valor da altura :"))
n=int(input("1/2:"))

if(n==1):
	v=(4 * pi)*(raio ** 3)/ 3
	print(round(v, 4)
	
else:
	v2= pi * h  ** 2 * ( 3 * raio - h)/ 3 
	print(round(v2, 4)

-- EXECUTION TIME:
0.217802
-- ERROR:
  File "/home/codebench/codes/1649/2443/main.py", line 11
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:08:39) 
-- CODE:
from math import*

raio= float(input("Didite o valor do raio :"))
h= float(input("digite o valor da altura :"))
n=int(input("1/2:"))

if(n==1):
	v=(4 * pi)*(raio ** 3)/ 3
	print(round(v, 4)
	
else:
	v2= pi * h  ** 2 * ( 3 * raio - h)/ 3 
	print(round(v2, 4)

-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:09:12) 
-- CODE:
from math import*

raio= float(input("Didite o valor do raio :"))
h= float(input("digite o valor da altura :"))
n=int(input("1/2:"))

if(n==1):
	v=(4 * pi)*(raio ** 3)/ 3
	print(round(v, 4))
else:
	v2= pi * h  ** 2 * ( 3 * raio - h)/ 3 
	print(round(v2, 4))

-- EXECUTION TIME:
0.172749
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
19.9983
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:09:13) 
-- CODE:
from math import*

raio= float(input("Didite o valor do raio :"))
h= float(input("digite o valor da altura :"))
n=int(input("1/2:"))

if(n==1):
	v=(4 * pi)*(raio ** 3)/ 3
	print(round(v, 4))
else:
	v2= pi * h  ** 2 * ( 3 * raio - h)/ 3 
	print(round(v2, 4))

-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:10:23) 
-- CODE:
from math import*

raio= float(input("Didite o valor do raio :"))
h= float(input("digite o valor da altura :"))
n=int(input("1/2:"))

if(n==1):
	v=(4 * pi)*(raio ** 3)/ 3
	print(round(v, 4))
else:
	v2=( pi * h  ** 2) * ( 3 * raio - h)/ 3 
	print(round(v2, 4))

-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:12:05) 
-- CODE:
from math import*

raio= float(input("Didite o valor do raio :"))
h= float(input("digite o valor da altura :"))
n=int(input("1/2:"))

if(n==1):
	v2=( pi * h  ** 2) * ( 3 * raio - h)/ 3 
	print(round(v, 4))
else:
	v=(4 * pi)*(raio ** 3)/ 3
	print(round(v2, 4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(v, 4))
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:12:45) 
-- CODE:
from math import*

raio= float(input("Didite o valor do raio :"))
h= float(input("digite o valor da altura :"))
n=int(input("1/2:"))

if(n==1):
	v2=( pi * h  ** 2) * ( 3 * raio - h)/ 3 
	print(round(v2, 4))
else:
	v=(4 * pi)*(raio ** 3)/ 3
	print(round(v, 4))

-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:13:25) 
-- CODE:
from math import*

raio= float(input("Didite o valor do raio :"))
h= float(input("digite o valor da altura :"))
n=int(input("1/2:"))

if(n==1):
	v2=( pi * h  ** 2) * ( 3 * raio - h)/ 3 
	print(round(v2, 4))
else:
	v=(4 * pi)*(raio ** 3)/ 3
	print(round(v, 4))

-- EXECUTION TIME:
0.176783
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
310.3391
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:15:32) 
-- CODE:
from math import*

raio= float(input("Didite o valor do raio :"))
h= float(input("digite o valor da altura :"))
n=int(input("1/2:"))

if(n==1):
	v2=( pi * h  ** 2) * ( 3 * raio - h)/ 3 
	print(round(v2, 4))
else:
	v=(4 * pi)*(raio ** 3)/ 3
	print(round(v, 4))

-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:16:11) 
-- CODE:
from math import*

raio= float(input("Didite o valor do raio :"))
h= float(input("digite o valor da altura :"))
n=int(input("1/2:"))

if(n==1):
	v2=( pi * (h  ** 2)) * ( 3 * raio - h)/ 3 
	print(round(v2, 4))
else:
	v=(4 * pi)*(raio ** 3)/ 3
	print(round(v, 4))

-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:22:42) 
-- CODE:
from math import*

raio= float(input("Didite o valor do raio :"))
h= float(input("digite o valor da altura :"))
n=int(input("1/2:"))
v1=( pi * (h  ** 2)) * ( 3 * raio - h)/ 3
v2=(4 * pi)*(raio ** 3)/ 3

df= v1-v2

if(n==1): 
	print(round(v1, 4))
else:
	print(round(df, 4))

-- EXECUTION TIME:
0.236405
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:22:47) 
-- CODE:
from math import*

raio= float(input("Didite o valor do raio :"))
h= float(input("digite o valor da altura :"))
n=int(input("1/2:"))
v1=( pi * (h  ** 2)) * ( 3 * raio - h)/ 3
v2=(4 * pi)*(raio ** 3)/ 3

df= v1-v2

if(n==1): 
	print(round(v2, 4))
else:
	print(round(df, 4))

-- EXECUTION TIME:
0.152054
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
-290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:22:50) 
-- CODE:
from math import*

raio= float(input("Didite o valor do raio :"))
h= float(input("digite o valor da altura :"))
n=int(input("1/2:"))
v1=( pi * (h  ** 2)) * ( 3 * raio - h)/ 3
v2=(4 * pi)*(raio ** 3)/ 3

df= v1-v2

if(n==1): 
	print(round(v2, 4))
else:
	print(round(df, 4))

-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:23:15) 
-- CODE:
from math import*

raio= float(input("Didite o valor do raio :"))
h= float(input("digite o valor da altura :"))
n=int(input("1/2:"))
v1=( pi * (h  ** 2)) * ( 3 * raio - h)/ 3
v2=(4 * pi)*(raio ** 3)/ 3

df= v2-v1

if(n==1): 
	print(round(v2, 4))
else:
	print(round(df, 4))

-- EXECUTION TIME:
0.212515
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 13:23:19) 
-- CODE:
from math import*

raio= float(input("Didite o valor do raio :"))
h= float(input("digite o valor da altura :"))
n=int(input("1/2:"))
v1=( pi * (h  ** 2)) * ( 3 * raio - h)/ 3
v2=(4 * pi)*(raio ** 3)/ 3

df= v2-v1

if(n==1): 
	print(round(v2, 4))
else:
	print(round(df, 4))

-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:23:29) 
-- CODE:
from math import*

raio= float(input("Didite o valor do raio :"))
h= float(input("digite o valor da altura :"))
n=int(input("1/2:"))
v1=( pi * (h  ** 2)) * ( 3 * raio - h)/ 3
v2=(4 * pi)*(raio ** 3)/ 3

df= v2-v1

if(n==1): 
	print(round(v2, 4))
else:
	print(round(df, 4))

-- EXECUTION TIME:
0.209573
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 13:23:38) 
-- CODE:
from math import*

raio= float(input("Didite o valor do raio :"))
h= float(input("digite o valor da altura :"))
n=int(input("1/2:"))
v1=( pi * (h  ** 2)) * ( 3 * raio - h)/ 3
v2=(4 * pi)*(raio ** 3)/ 3

df= v2-v1

if(n==1): 
	print(round(v1, 4))
else:
	print(round(df, 4))

-- EXECUTION TIME:
0.208776
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
